# gene-intervention-planner

./: .gitignore  BEHAVIOURAL_AL_REPORT.md  Claude.md  PROJECT_SUMMARY.md  README.md  pyproject.toml  run_all.py  run_all_experiments.py  run_data_pipeline.py  todo_list.md
.claude/: settings.json  settings.local.json
experiments/: analyse_results.py  exp01_baseline_neural_relevance.py  exp02_feature_comparison.py  exp03_al_vs_random.py  exp04_hybrid_acquisition.py  exp05_interaction_prioritization.py  exp06_pu_learning.py  feature_loader.py  generate_all_summaries.py  pub_style.py
experiments/behavioural_al/: acquisition.py  build_neural_target.py  data_loader.py  exp01_baseline.py  exp02_feature_comparison.py  exp03_al_vs_random.py  exp04_hybrid.py  models.py  run_experiment.py
notebooks/: 01_baseline_exploration.ipynb
src/gene_intervention_planner/data/: 01_dataset_all.py  02_label_genes.py  03_ortholog_mapper.py  04_synptic_mapping.py  05_functional_features.py  06_esm2_features.py  07_kmer_features.py  08_go_features.py  __init__.py  wormbase_data.py
